# partle

./: .env.example  .env.test  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  DEPLOY.md  DEPLOYMENT_CHECKLIST.md  ELASTICSEARCH.md  FIX_521_ERROR.md  GEMINI.md  KNOWLEDGE_BASE.md  LICENSE  MCP_FIX_LOG.md  Makefile  PORTS.md  README.md  SERVER_INFO.md  TESTING.md  TODO.md  backend.gemini  deploy.sh  dev_setup.sh  docker-compose.yml  frontend.gemini  mcp-manifest.json  mkdocs.yml  nginx-fixed.conf  nginx-optimized.conf  ngrok_recovery_codes.txt.gitignore.md  package-lock.json  partle-backend.service  pass.gitignore.md  pytest.ini  setup.sh  start-backend.sh  start-frontend.sh  start_backend.sh  stuff.md  test_search_behavior.py
backend/: .env.example  Makefile  README.md  SCRAPERS_CATALOG.md  add_instore_tags.py  add_test_images.py  alembic.ini  check_mengual_store.py  check_scrapers_status.py  conftest.py  create_test_stores.py  downloaded_server.env  generate_openapi.py  manage_roles.py  manage_search.py  mcp_config.json  mcp_scraper_monitor.py  partle.db  products_output.txt  pyproject.toml  pytest.ini  remove_example_products.py  test_email_debug.py  test_image_products.py  test_logo_feature.py  test_mcp.py  test_mcp_scraper.py  test_performance.py  test_scraper_tags.py  test_your_email.py  update_product_tags.py
backend/.gemini/: query_db.py
backend/alembic/: env.py
backend/alembic/versions/: 0d106763b960_add_credential_table.py  1c7b0f3261b5_create_products_table.py  1e11c10e8f53_init.py  2ac373f73968_add_username_field_to_users.py  36b5708b7b23_remove_image_url_field_from_products_.py  5595cf24ec17_init_schema.py  585c3bfca49f_add_index_on_products_creator_id_for_.py  5c516b1882b1_add_logo_and_profile_picture_fields.py  6c21a37be6b8_add_image_storage_fields_to_products.py  6d301db3d9be_recreate_store_type_enum_with_chain.py  8cdfc51661a9_fix_store_type_enum_update.py  9011a302d9ab_add_tags.py  a5480c7a2beb_merge_store_type_enum_branches.py  abcd1234abcd_add_product_update_fields.py  ad27e536d3af_add_created_at_to_product.py  add_role_to_user_7b3c4a2d9f5e.py  af9392ae8fa0_add_store_id_index_to_products.py  b08c15414227_update_store_type_enum_to_lowercase_.py  bd1cfae45430_merge_heads.py  c2dc0d35fa4b_add_chain_type_to_storetype_enum.py  d33c35409f15_add_creator_id_to_product.py  d7d41e601bcb_add_product_reviews_table.py  e86d04e8e46e_add_description_field_to_tags_table.py  efc6f531b186_add_image_url_to_product.py  f20a588a77a0_add_currency_field_to_products.py  ffbebe72d891_add_sku_field_with_per_store_uniqueness.py
backend/app/: db.py  logging_config.py  main.py  models.py
backend/app/api/: auth.py  deps.py  mcp_bridge.py  mcp_sse.py
backend/app/auth/: security.py  utils.py
backend/app/db/: __init__.py  base.py  models.py  session.py
backend/app/mcp/: __init__.py  analytics.py  location_intelligence.py  price_intelligence.py  products.py  recommendations.py  scraper_monitor.py  stores.py
backend/app/middleware/: rate_limit.py
backend/app/routes/: bulk_import.py
backend/app/schemas/: auth.py  part.py  product.py  review.py  store.py  tag.py
backend/app/scraper/: .env.example  README.md  SCRAPER_README.md  SPANISH_RETAILERS.md  debug_herramientas-manuales.html  debug_html.py  debug_materiales-construccion.html  debug_muebles.html  (+10 more)
backend/backups/: pre_scraping_backup_20250830_181930.sql
backend/sample_imports/: minimal_import.csv  product_import_template.csv  product_import_template.xlsx
backend/scripts/: README.md  backup_database.sh  create_sample_import.py  mcp_debug_wrapper.sh  migrate.sh  run-migration.sh  run_mcp_analytics.py  run_mcp_location_intelligence.py  run_mcp_price_intelligence.py  run_mcp_products.py  run_mcp_recommendations.py  run_mcp_scraper_monitor.py  run_mcp_stores.py  run_mcp_wrapper.sh
backend/stuff/: add_mock_images.py  count_mock_products.py  populate_db.py
backend/tests/: README.md  test_api.py  test_auth_utils.py  test_external_api.py  test_fast_api.py  test_health.py  test_mock_data_filtering.py  test_product_mod.py  test_products.py  test_registration_flow.py  test_scraper_import.py
(+223 files in other folders)
