[tool.poetry]
name = "partle-backend"
version = "0.1.0"
description = "FastAPI backend for Partle"
authors = ["Rubén Jiménez Mejías <ruben.jimenezmejias@gmail.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = "^0.110.0"  # or "^0.100.0" minimum
uvicorn = { extras = ["standard"], version = "^0.22.0" }
SQLAlchemy = "^2.0"
pydantic = "^2.0"
httpx = "^0.28.1"
alembic = "^1.13"
psycopg2-binary = "^2.9"
python-jose = "^3.3.0"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }


[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
