[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "partle-backend"
version = "0.1.0"
description = "FastAPI backend for Partle"
authors = [{ name = "Rubén Jiménez Mejías", email = "ruben.jimenezmejias@gmail.com" }]
readme = "README.md"
license = { text = "Proprietary" }
requires-python = ">=3.12,<4.0"

[tool.poetry] # Keep Poetry-specific config here if needed
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.12,<4"
fastapi = "^0.110.0"  # or "^0.100.0" minimum
uvicorn = { extras = ["standard"], version = "^0.22.0" }
SQLAlchemy = "^2.0"
pydantic = "^2.0"
httpx = "^0.25.0"
alembic = "^1.13"
psycopg2-binary = "^2.9"
python-jose = "^3.3.0"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
email-validator = "^2.2.0"
python-multipart = "^0.0.20"
fido2 = "^2.0.0"
itsdangerous = "^2.2.0"
bcrypt = "<4.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
ruff = "^0.4" # Added ruff
pytest-dotenv = "^0.5.2"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["app", "tests"]
env_files = [
    ".env.test"
]

[tool.ruff]
line-length = 120
exclude = [
    "stuff/" # Assuming you might have a similar 'stuff' directory in backend
]

[tool.ruff.lint]
select = ["E", "F", "D"]
ignore = ["D100", "D104", "D107"] # Common ignores for docstrings

[tool.ruff.format]
quote-style = "single"
